Fixed the font size on smaller screens

--- a/boxxy/videowall/css/videowall.css
+++ b/boxxy/videowall/css/videowall.css
@@ -11,7 +11,7 @@ html, body {
     background-color: #fff;
 
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 75px;
+    font-size: 70px;
     line-height: 1;
 }
 
